--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>My Personal website</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#interests">Interests</a>
+        <a href="#contact">Contact</a>
+      </nav>
 </body>
 </html>
